                    *************************
                    ** afex VERSION 0.21-x **
                    *************************
                    
                    Changes in afex Version 0.21-x
                    Released June 2018
                    
    Significant User Visible Changes and New Features
    
    o   Smaller package footprint: The coin package (used in compare.2.vectors) 
        was moved from Imports to Suggests.
    
    Bugfixes

    o   ANOVA functions produce accurate emmeans even for ANCOVAs, see: 
        https://afex.singmann.science/forums/topic/precise-estimates-from-emmeans-across-lm-and-aov_ez

    
    
                    *************************
                    ** afex VERSION 0.20-x **
                    *************************
                    
                    Changes in afex Version 0.20-x
                    Released April 2018
                    
    Significant User Visible Changes and New Features
    
    o   follow-up tests with emmeans for ANOVAs (i.e., objects of class 
        "afex_aov") with repeated-measures factors can now be based on a 
        multivariate model. This provides separate standard errors for each 
        estimate and more adequately accounts for violations of sphericity. To 
        use this model either call emmeans(..., model="multivariate") or set 
        globally via: afex_options(emmeans_model = "multivariate")

    o   ANOVA functions now allow transformations of the dv (thanks to 
        Russell Lenth).
    
    o   better (i.e., simpler) examples for mixed (use data from MEMSS). Added
        example showing how to use mixed() with effects package for plotting.
        
    o   set_data_arg argument of mixed() is now per default controlled via 
        afex_options("set_data_arg"). The default has also changed from TRUE to 
        FALSE. The reason for this change is that FALSE appears to work better 
        with emmeans. 
        