@@ -70,5 +70,4 @@ importFrom(stats,terms)
 importFrom(stats,update)
 importFrom(stats,wilcox.test)
 importFrom(stats,xtabs)
-importFrom(stringr,str_c)
 importFrom(utils,packageVersion)
