@@ -11,8 +11,8 @@ Analysis of Factorial Experiments.
 \tabular{ll}{
 Package: \tab afex\cr
 Type: \tab Package\cr
-Version: \tab 0.21-0\cr
-Date: \tab 2018-04-15\cr
+Version: \tab 0.21-1\cr
+Date: \tab 2018-06-24\cr
 Depends: \tab R (>= 3.1.0), lme4 (>= 1.1-8), emmeans\cr
 Encoding: \tab UTF-8\cr
 License: \tab GPL (>=2)\cr
